# KeyCred

./: .gitignore  BUILD.md  CMakeLists.txt  Install.bat  README.md  Test.bat  TitanKeyCP.def  Uninstall.bat
.cursor/plans/: titan_key_credential_provider_3c24e136.plan.md
.github/workflows/: build.yml
include/: common.h
res/: TitanKeyCP.rc
src/: CredentialStorage.cpp  CredentialStorage.h  CryptoHelper.cpp  CryptoHelper.h  Ctap2Helper.cpp  Ctap2Helper.h  TestTitanKeyCP.cpp  TitanKeyCredential.cpp  TitanKeyCredential.h  TitanKeyCredentialProvider.cpp  TitanKeyCredentialProvider.h  TpmCrypto.cpp  TpmCrypto.h  WebAuthnHelper.cpp  WebAuthnHelper.h  dll.cpp  guid.h  resource.h
tools/: Register.bat  RegisterCredential.ps1  SetupCredential.bat  SetupCredential.ps1  Unregister.bat  UnregisterCredential.ps1
